fix: find start text-wrap

--- a/src/components/canvas/Canvas.module.scss
+++ b/src/components/canvas/Canvas.module.scss
@@ -89,6 +89,9 @@ $background_offset: ($grid_size / 2) + ($node_padding) + px;
   }
 
   .start_tooltip {
+    overflow-wrap: unset;
+    white-space: nowrap;
+
     :last-child {
       left: 300px !important;
 
